<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:paddingBottom="8dp"
            android:text="@string/habit_details"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailsText"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:lineSpacingExtra="4dp"
            android:paddingBottom="16dp"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:paddingBottom="8dp"
            android:text="@string/additional_information"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/additionalText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:lineSpacingExtra="4dp"
            android:textColor="#333333"
            android:textSize="16sp" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginBottom="@dimen/cardview_default_radius"
            android:text="@string/back" />

    </LinearLayout>
</ScrollView>